package modelo;

public class Cliente {
    private int id;
    private String nome;
    private String email;
    private String fone;

    public Cliente() {
    }

    public Cliente(int id, String nome, String email, String fone) {
        this.id = id;
        this.nome = nome;
        this.email = email;
        this.fone = fone;
    }

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public String getFone() {
        return fone;
    }

    public void setFone(String fone) {
        this.fone = fone;
    }

    @Override
    public String toString() {
        return String.format("ID: %-3d | Nome: %-20s | E-mail: %-20s | Telefone: %s",
                id, nome, email, fone);
    }
}