@startuml
skinparam roundcorner 8
skinparam shadowing false
skinparam defaultFontName "Segoe UI", Helvetica, Arial, sans-serif
skinparam classFontSize 12
skinparam classAttributeFontSize 11

skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #2C3E50
    BorderThickness 1.5
    ArrowThickness 1.5
    HeaderBackgroundColor #ECF0F1
    FontColor #2C3E50
}

skinparam package {
    BackgroundColor #F8F9FA
    BorderColor #ADB5BD
    BorderThickness 1
    FontColor #212529
    FontStyle bold
}

package "dao" {
    interface "DAO<T>" as DAO {
        inserir(T)
        listar()
        listarId(int)
        atualizar(T)
        excluir(T)
        abrir()
        salvar()
    }

    abstract class "AbstractDAO<T>" as AbstractDAO {
        # objetos : Map<Integer, T>
        # nextId : int
        # ARQUIVO : String
        inserir(T)
        listar()
        listarId(int)
        atualizar(T)
        excluir(T)
        abrir()
        salvar()
    }

    class CategoriaDAO {
        + CategoriaDAO()
        + listarId(int)
        + atualizar(Categoria)
        + excluir(Categoria)
    }
    class ProdutoDAO {
        + ProdutoDAO()
        + listarId(int)
        + atualizar(Produto)
        + excluir(Produto)
    }
    class ClienteDAO {
        + ClienteDAO()
        + listarId(int)
        + atualizar(Cliente)
        + excluir(Cliente)
    }
    class VendaDAO {
        + VendaDAO()
        + listarId(int)
        + atualizar(Venda)
        + excluir(Venda)
    }
    class VendaItemDAO {
        + VendaItemDAO()
        + listarId(int)
        + atualizar(VendaItem)
        + excluir(VendaItem)
    }

    DAO <|.. AbstractDAO #3498DB
    AbstractDAO <|-- CategoriaDAO #2C3E50
    AbstractDAO <|-- ProdutoDAO #2C3E50
    AbstractDAO <|-- ClienteDAO #2C3E50
    AbstractDAO <|-- VendaDAO #2C3E50
    AbstractDAO <|-- VendaItemDAO #2C3E50
}

package "modelo" {
    class Categoria {
        - id
        - descricao
    }
    class Produto {
        - id
        - descricao
        - preco
        - estoque
        - idCategoria
    }
    class Cliente {
        - id
        - nome
        - email
        - fone
    }
    class Venda {
        - id
        - date
        - total
        - carrinho
        - idCliente
        - tipoPagamento
        - parcelas
    }
    class VendaItem {
        - id
        - qtd
        - preco
        - idVenda
        - idProduto
    }

    interface "FormaPagamento" as FormaPagamento {
        calcularTaxa(double)
        getDescricao()
    }
    class Boleto
    class Cartao {
        - parcelas
    }
    class Pix

    FormaPagamento <|.. Boleto #3498DB
    FormaPagamento <|.. Cartao #3498DB
    FormaPagamento <|.. Pix #3498DB

    Produto --> Categoria #E74C3C : pertence a
    VendaItem --> Produto #E74C3C : refere-se a
    Venda --> Cliente #E74C3C : realizada por
    Venda --> VendaItem #E74C3C : contem
}

package "bean" {
    class CategoriaBean {
        + carregar()
        + salvar()
        + excluir()
        + editar()
    }
    class ClienteBean {
        + carregar()
        + salvar()
        + excluir()
        + editar()
    }
    class ProdutoBean {
        + carregar()
        + salvar()
        + excluir()
        + editar()
    }
    class VendaBean {
        + iniciarCarrinho()
        + adicionarItem()
        + finalizarVenda()
        + getItensCarrinho()
        + getLista()
    }
}

CategoriaDAO --> Categoria #27AE60
ProdutoDAO --> Produto #27AE60
ClienteDAO --> Cliente #27AE60
VendaDAO --> Venda #27AE60
VendaItemDAO --> VendaItem #27AE60

CategoriaBean --> CategoriaDAO #E67E22
ClienteBean --> ClienteDAO #E67E22
ProdutoBean --> ProdutoDAO #E67E22
ProdutoBean --> CategoriaDAO #E67E22
VendaBean --> VendaDAO #E67E22
VendaBean --> VendaItemDAO #E67E22
VendaBean --> ProdutoDAO #E67E22
VendaBean --> ClienteDAO #E67E22
VendaBean --> FormaPagamento #E67E22
@enduml
